--- a/app/hero-form.component.html
+++ b/app/hero-form.component.html
@@ -1,14 +1,24 @@
 <div class="container">
-    <h1>Hero Form</h1>
-    <form>
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input type="text" class="form-control" id="name" required>
-      </div>
-      <div class="form-group">
-        <label for="alterEgo">Alter Ego</label>
-        <input type="text" class="form-control" id="alterEgo">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+	<h1>Hero Form</h1>
+	<form>
+
+		<div class="form-group">
+			<label for="name">Name</label>
+			<input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name">
+		</div>
+
+		<div class="form-group">
+			<label for="alterEgo">Alter Ego</label>
+			<input type="text" class="form-control" id="alterEgo" [(ngModel)]="model.alterEgo" name="alterEgo">
+		</div>
+
+		<div class="form-group">
+			<label for="power">Hero Power</label>
+			<select class="form-control" id="power" required [(ngModel)]="model.power" name="power">
+        <option *ngFor="let p of powers" [value]="p">{{p}}</option>
+      </select>
+		</div>
+
+		<button type="submit" class="btn btn-default">Submit</button>
+	</form>
 </div>
