--- a/app/hero-form.component.html
+++ b/app/hero-form.component.html
@@ -1,10 +1,11 @@
 <div class="container">
 	<h1>Hero Form</h1>
-	<form>
+	<form *ngIf="active" (ngSubmit)="onSubmit()" #heroForm="ngForm">
 
 		<div class="form-group">
 			<label for="name">Name</label>
-			<input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name">
+			<input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #namex="ngModel">
+      <div [hidden]="namex.valid || namex.pristine" class="alert alert-danger">Name is required</div>
 		</div>
 
 		<div class="form-group">
@@ -19,6 +20,7 @@
       </select>
 		</div>
 
-		<button type="submit" class="btn btn-default">Submit</button>
+		<button type="submit" class="btn btn-default" [disabled]="!heroForm.form.valid" >Submit</button>
+    <button type="button" class="btn btn-default" (click)="newHero()">New Hero</button>
 	</form>
 </div>
