--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 /* #docregion , quickstart, toh */
 /* Master Styles */
+* {
+  box-sizing: inherit;
+}
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
